# astra2_wrapper

astra_wrapper/: package.xml  setup.cfg  setup.py
astra_wrapper/astra_wrapper/: start_astra.py
astra_wrapper/resource/: requirements.txt
